# vst3-plugin-template

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
.github/workflows/: build.yml
docs/: DEVELOPMENT.md  REFERENCE.md  USER_MANUAL.md
include/: PluginEditor.h  PluginProcessor.h
source/: PluginEditor.cpp  PluginProcessor.cpp
